# clustera-integration-google-drive

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml.example  service.yaml  servicemonitor.yaml
deploy/mock/: expectations.json  mockserver.properties
docs/: GOOGLE_DRIVE_API.md  OAUTH_SETUP.md  PUSH_NOTIFICATIONS.md  TROUBLESHOOTING.md
src/google_drive_worker/: __init__.py  __main__.py  capabilities.py  config.py  health.py  worker.py
src/google_drive_worker/client/: __init__.py  auth.py  drive_api.py  s3.py
src/google_drive_worker/handlers/: __init__.py  base.py  capability.py  content_emitter.py  fetch.py  init.py  teardown.py  trigger.py  webhook.py  write.py
src/google_drive_worker/normalization/: __init__.py  mime_types.py  transformer.py
src/google_drive_worker/schemas/: __init__.py  fetch.py  write.py
src/google_drive_worker/utils/: __init__.py  circuit_breaker.py  errors.py  idempotency.py  rate_limit.py
tests/fixtures/: mock_drive_responses.json
tests/integration/: conftest.py  test_kafka_flow.py
tests/unit/: test_auth.py  test_circuit_breaker.py  test_client.py  test_file_storage.py  test_handlers.py  test_idempotency.py  test_mime_types.py  test_rate_limit.py  test_s3_offload.py  test_transformer.py  test_webhook_handler.py
